# vision_app

./: .gitignore  .streamlit  AGENT_RUN.md  CAPA_GEMATRIA.md  CHECKLIST_CLOUD.md  DETALLE_COMPLETO_PASO3.md  Dockerfile  ESTADO_FINAL_PROTOCOLO_CUANTICO.md  INSTRUCCIONES_FINALES.md  INSTRUCCIONES_SERVERLESS.md  INTEGRACION_CUANTICA_CORRECTA.md  MIGRATION_GUIDE.md  NOTICIAS_COMPLETAS_ACOPIADAS.md  NOTICIAS_DIA_ACTUAL_8_SEPTIEMBRE_2025.md  NOTICIAS_MAESTRO.md  PASOS_PROTOCOLO_CUANTICO.md  PROTOCOLO_UNIVERSAL_CON_CUANTICO.md  README.md  README_DEPLOY_CLOUD.md  README_QUANTUM_FLORIDA.md  RESULTADO_ARTIFACTS_PATCH.md  RESULTADO_PASO1_INICIALIZACION.md  RESULTADO_PASO2_CONFIGURACION.md  RESULTADO_PASO3_ANALISIS_SORTEO.md  RESULTADO_PASO3_V2_COMPLETO.md  RESULTADO_PASO4_NOTICIAS_GUIADA.md  RESULTADO_PASO5_FIX_EXITOSO.md  RESULTADO_PASO5_NOTICIAS_REALES_COMPLETO.md  RESULTADO_PASO5_TABLA_100.md  RESULTADO_PATCH_INGESTA_NOTICIAS.md  ROLLBACK_PLAN.md  SECRETS.md  SETUP_AGENT_COMPLETO.md  SORTEO_ACTUALIZADO_SEPTIEMBRE_2025.md  SORTEO_FLORIDA_QUINIELA.md  SYSTEM_CLEAN_STATUS.md  SYSTEM_REVIEW.md  T70.csv  TRIGGER_BUILD.md  VERIFICATION_REPORT.md  (+93 more)
.docs/: DECISION_LOG.md  RUNBOOKS.md
.streamlit/: config.toml  secrets.toml
CAPAS/: CAPA_GEMATRIA.md
__CONFIG/: T70_enriched.json  bing_queries.txt  blacklist_patterns.txt  blocked_domains.txt  gnews_queries.txt  libros_gematria.txt  libros_subliminal.txt  quantum_config.json  rss_sources.txt  t70_mapping.json
__LIBRARY/: __LIBRARY  manifest.csv  permissions.csv  render_library
app_vision/: __init__.py  __main__.py
data/: T100.csv  (+17 more)
(+312 files in other folders)
